
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct arguments {char* dumpfile; char** args; scalar_t__ verbose; scalar_t__ list; } ;
typedef int FILE ;
typedef int BrInitError ;


 int PATH_MAX ;
 int SEEK_END ;
 int argp ;
 int argp_parse (int *,int,char**,int ,int ,struct arguments*) ;
 char* basename (char*) ;
 char* br_find_exe_dir (int *) ;
 scalar_t__ br_init (int*) ;
 char* br_strcat (char*,char*) ;
 scalar_t__ chmod (char*,int) ;
 int die (char*) ;
 int exit (int) ;
 int fclose (int *) ;
 int feof (int *) ;
 int fileno (int *) ;
 int * fopen (char*,char*) ;
 int fprintf (int ,char*,...) ;
 int fread (char*,int,int,int *) ;
 int fseek (int *,int ,int ) ;
 scalar_t__ ftruncate (int ,int) ;
 int fwrite (char*,int,int,int *) ;
 scalar_t__ is_directory (char*) ;
 scalar_t__ is_regular_file (char*) ;
 int printf (char*,...) ;
 int realpath (char*,char*) ;
 char* runtime ;
 int runtime_len ;
 int sfs_ls (char*) ;
 int sfs_mksquashfs (char*,char*) ;
 int stderr ;
 int stdout ;
 scalar_t__ unlink (char*) ;

int main (int argc, char **argv)
{


  BrInitError error;
  if (br_init (&error) == 0) {
    printf ("Warning: binreloc failed to initialize (error code %d)\n", error);
  }
  printf ("This tool is located at %s\n", br_find_exe_dir(((void*)0)));

  struct arguments arguments;


  arguments.list = 0;
  arguments.verbose = 0;
  arguments.dumpfile = ((void*)0);


  argp_parse (&argp, argc, argv, 0, 0, &arguments);


  if (arguments.list){
    sfs_ls(arguments.args[0]);
    exit(0);
  }


  if (arguments.dumpfile){
    fprintf (stdout, "%s from the AppImage %s should be dumped to stdout\n", arguments.dumpfile, arguments.args[0]);
    die("To be implemented");
  }


  if (arguments.verbose)
      fprintf (stdout, "Original SOURCE = %s\nOriginal DESTINATION = %s\n",
        arguments.args[0],
        arguments.args[1]);


  if(is_directory(arguments.args[0])){
      char *destination;
      char source[PATH_MAX];
      realpath(arguments.args[0], source);
      if (arguments.args[1]) {
          destination = arguments.args[1];
      } else {


          destination = basename(br_strcat(source, ".AppImage"));
          fprintf (stdout, "DESTINATION not specified, so assuming %s\n", destination);
      }
      fprintf (stdout, "%s should be packaged as %s\n", arguments.args[0], destination);




      char *tempfile;
      fprintf (stderr, "Generating squashfs...\n");
      tempfile = br_strcat(destination, ".temp");
      int result = sfs_mksquashfs(source, tempfile);
      if(result != 0)
          die("sfs_mksquashfs error");

      fprintf (stderr, "Generating AppImage...\n");
      FILE *fpsrc = fopen(tempfile, "rb");
      if (fpsrc == ((void*)0)) {
         die("Not able to open the tempfile for reading, aborting");
      }
      FILE *fpdst = fopen(destination, "w");
      if (fpdst == ((void*)0)) {
         die("Not able to open the destination file for writing, aborting");
      }



      int size = runtime_len;
      char *data = runtime;
      if (arguments.verbose)
          printf("Size of the embedded runtime: %d bytes\n", size);






      if(size > 128*1024-4*4096-2){
          die("Size of the embedded runtime is too large, aborting");
      }

      fwrite(data, size, 1, fpdst);

      if(ftruncate(fileno(fpdst), 128*1024) != 0) {
          die("Not able to write padding to destination file, aborting");
      }

      fseek (fpdst, 0, SEEK_END);
      char byte;

      while (!feof(fpsrc))
      {
          fread(&byte, sizeof(char), 1, fpsrc);
          fwrite(&byte, sizeof(char), 1, fpdst);
      }

      fclose(fpsrc);
      fclose(fpdst);

      fprintf (stderr, "Marking the AppImage as executable...\n");
      if (chmod (destination, 0755) < 0) {
          printf("Could not set executable bit, aborting\n");
          exit(1);
      }
      if(unlink(tempfile) != 0) {
          die("Could not delete the tempfile, aborting");
      }
      fprintf (stderr, "Success\n");
}


  if(is_regular_file(arguments.args[0])){
      fprintf (stdout, "%s is a file, assuming it is an AppImage and should be unpacked\n", arguments.args[0]);
      die("To be implemented");
  }

  return 0;
}
